--- a/index.css
+++ b/index.css
@@ -10,25 +10,25 @@ TO DO: Add @media rule ("hover") to disable this if the user cannot hover.
     --results-side-margin: 15%;
     --recipe-side-margin: 30%;
     --button-standard-size: 65px;
-    --p-text-size: 16px;
+    --p-text-size: 1.6rem;
     --fade-height: 6%;
     -webkit-text-size-adjust: none !important; 
     text-size-adjust: none !important;
 
     h1 {
-        font-size: 50px;
+        font-size: 5rem;
     }
 
     h2 {
-        font-size: 35px;
+        font-size: 3.5rem;
     }
 
     h3 {
-        font-size: 25px;
+        font-size: 2.5rem;
     }
 
     p {
-        font-size: 16px;
+        font-size: 1.6rem;
     }
 }
 
@@ -42,31 +42,35 @@ body {
     background: #0099ff;
 }
 
+html, body {
+    font-size: 62.5%;
+}
+
 @media screen and (min-width: 720px) and (hover:none) {
     :root {
         --results-side-margin: 2%;
         --recipe-side-margin: 2%;
         --button-standard-size: 130px;
-        --p-text-size: 45px;
+        --p-text-size: 4.5rem;
 
         body {
             /* background-color: purple; */
         }
 
         h1 {
-            font-size: 85px;
+            font-size: 8.5rem;
         }
 
         h2 {
-            font-size: 70px;
+            font-size: 7rem;
         }
 
         h3 {
-            font-size: 50px;
+            font-size: 5rem;
         }
 
         p {
-            font-size: 45px;
+            font-size: 4.5rem;
         }
 
     }
@@ -77,26 +81,26 @@ body {
         --results-side-margin: 2%;
         --recipe-side-margin: 2%;
         --button-standard-size: 130px;
-        --p-text-size: 40px;
+        --p-text-size: 4rem;
 
         body {
             /* background-color: red; */
         }
 
         h1 {
-            font-size: 80px;
+            font-size: 8rem;
         }
 
         h2 {
-            font-size: 60px;
+            font-size: 6rem;
         }
 
         h3 {
-            font-size: 45px;
+            font-size: 4.5rem;
         }
 
         p {
-            font-size: 40px;
+            font-size: 4rem;
         }
     }
 }
@@ -106,26 +110,26 @@ body {
         --results-side-margin: 6%;
         --recipe-side-margin: 12%;
         --button-standard-size: 100px;
-        --p-text-size: 23px;
+        --p-text-size: 2.3rem;
 
         body {
             /* background-color: orange; */
         }
         
         h1 {
-            font-size: 70px;
+            font-size: 7rem;
         }
 
         h2 {
-            font-size: 45px;
+            font-size: 4.5rem;
         }
 
         h3 {
-            font-size: 30px;
+            font-size: 3rem;
         }
 
         p {
-            font-size: 23px;
+            font-size: 2.3rem;
         }
     }
 }
@@ -135,26 +139,26 @@ body {
         --results-side-margin: 10%;
         --recipe-side-margin: 20%;
         --button-standard-size: 85px;
-        --p-text-size: 19px;
+        --p-text-size: 1.9rem;
 
         body {
             /* background-color: yellow; */
         }
 
         h1 {
-            font-size: 60px;
+            font-size: 6rem;
         }
 
         h2 {
-            font-size: 35px;
+            font-size: 3.5rem;
         }
 
         h3 {
-            font-size: 25px;
+            font-size: 2.5rem;
         }
 
         p {
-            font-size: 19px;
+            font-size: 1.9rem;
         }
     }
 }
@@ -164,26 +168,26 @@ body {
         --results-side-margin: 15%;
         --recipe-side-margin: 30%;
         --button-standard-size: 65px;
-        --p-text-size: 16px;
+        --p-text-size: 1.6rem;
 
         body {
             /* background-color: green; */
         }
 
         h1 {
-            font-size: 50px;
+            font-size: 5rem;
         }
 
         h2 {
-            font-size: 30px;
+            font-size: 3rem;
         }
 
         h3 {
-            font-size: 23px;
+            font-size: 2.3rem;
         }
 
         p {
-            font-size: 16px;
+            font-size: 1.6rem;
         }
     }
 }
@@ -511,8 +515,6 @@ h3 {
 .recipe-card {
     position: relative;
     width: 250px;
-    height: 270px;
-    overflow: hidden;
     text-align: center;
     vertical-align: text-bottom;
     font-size: 25px;
@@ -523,7 +525,8 @@ h3 {
     #thumbnail {
     height: 150px;
     width: 250px;
-    outline: 1px solid black;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
     object-fit: fill;
     }   
         
@@ -554,7 +557,6 @@ h3 {
 .recipe-text-container {
     display: grid;
     width: 250px;
-    height: 75px;
     place-items: center;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -615,6 +617,10 @@ h3 {
     }
 }
 
+li {
+    margin-bottom: 10px;
+}
+
 .instruction-item {
     font-size: var(--p-text-size);
 }
@@ -645,6 +651,8 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     justify-content: space-between;
+    margin-top: 6%;
+    margin-bottom: 6%;
 
     .unitswitch {
     cursor: pointer;
